--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -3,25 +3,32 @@ div(ng-include='"components/navbar/navbar.html"')
 .container
   .row
     .col-lg-12
-      h1.page-header Features:
+      h1.page-header Patients:
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
         li
-          a(href='#', tooltip='{{thing.info}}')
+          a(href='#', tooltip='{{thing.id}}')
             | {{thing.name}}
             button.close(type='button', ng-click='deleteThing(thing)') ×
 
   form.thing-form
     label Syncs in realtime across clients
     p.input-group
-      input.form-control(type='text', placeholder='Add a new thing here.', ng-model='newThing')
+      input.form-control(type='text', placeholder='Name.', ng-model='newName')
+      input.form-control(type='text', placeholder='Identifier.', ng-model='newIdentifier')
+      input.form-control(type='text', placeholder='Avtar.', ng-model='newAvtar')
+      input.form-control(type='text', placeholder='Date of Birth.', ng-model='newDob')
+      input.form-control(type='text', placeholder='Date of TOA.', ng-model='newDatet')
+      input.form-control(type='text', placeholder='MRP.', ng-model='newMrp')
+      input.form-control(type='text', placeholder='Nurse.', ng-model='newNurse')
+      input.form-control(type='text', placeholder='Story.', ng-model='newStory')
+      input.form-control(type='text', placeholder='Assessment.', ng-model='newAssessment')
+      input.form-control(type='text', placeholder='Follow up.', ng-model='newFollowup')
+      input.form-control(type='text', placeholder='Evaluation.', ng-model='newEvaluation')
       span.input-group-btn
         button.btn.btn-primary(type='submit', ng-click='addThing()') Add New
 
 footer.footer
   .container
     p
-      | Angular Fullstack v2.1.1
-      = ' | '
-      a(href='https://twitter.com/tyhenkel') @tyhenkel
-      = ' | '
-      a(href='https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open') Issues
+      | NuChange TOA v 1.0.1
+      
