--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -7,7 +7,7 @@ div(ng-include='"components/navbar/navbar.html"')
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
         li
           a(href='#', tooltip='{{thing.id}}')
-            | {{thing.name}}
+            | {{thing.name}}({{thing.identifier}})
             button.close(type='button', ng-click='deleteThing(thing)') ×
 
   form.thing-form
