--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -7,8 +7,16 @@ div(ng-include='"components/navbar/navbar.html"')
       h1.page-header Patients:
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
         li
-          a(href='#', ng-click='editThing(thing)', tooltip='{{thing.id}}')
+          a(href='#', ng-click='editThing(thing)', tooltip='{{thing.identifier}}')
             | {{thing.name}}({{thing.identifier}})
+            | {{thing.dob}}
+            | {{thing.datet}}
+            | {{thing.mrp}}
+            | {{thing.nurse}}
+            | {{thing.story}}
+            | {{thing.assessment}}
+            | {{thing.followup}}
+            | {{thing.evaluation}}
             button.close(type='button', ng-click='deleteThing(thing)') ×
 
   //- This form needs to be beautified.
