--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -6,7 +6,9 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') toa
+      span.navbar-brand(href="#")
+        img(src="http://nuchange.ca/wp-content/uploads/2015/01/logo_nuchange.png", height=40, width=160)
+      a.navbar-brand(href='/') ToA
 
     div#navbar-main.navbar-collapse.collapse(collapse='isCollapsed')
       ul.nav.navbar-nav
