--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -8,7 +8,7 @@ div(ng-include='"components/navbar/navbar.html"')
       ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
         li
           a(href='#', ng-click='editThing(thing)', tooltip='{{thing.identifier}}')
-            | {{thing.name}}({{thing.identifier}})
+            | {{thing.name}}({{thing.identifier}})({{thing.ip}})
             | {{thing.dob}}
             | {{thing.datet}}
             | {{thing.mrp}}
