--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -32,3 +32,73 @@
 .navbar-text {
   margin-left: 15px;
 }
+
+ .form{ 
+    max-width: 43%; 
+    min-width: 25%; 
+    border-width: 2px; 
+    border-color: #FC150D; 
+    border-radius: 5px; 
+    border-style: groove; 
+    color: #080873; 
+    font-size: 14px; 
+    margin: 5px; 
+    background-color: #E8E8E8; 
+    padding: 20px; 
+} 
+.content{ 
+    margin: 5px; 
+} 
+.form label{ 
+    color: #03078C; 
+    font-size: 18px; 
+    display: block; 
+} 
+.form input[type=radio], input[type=checkbox]{ 
+    margin: 10px; 
+    width: 13px; 
+} 
+.form div{ 
+    display: block; 
+} 
+.form input, form textarea, form select{ 
+    border-width: 3px; 
+    border-style: solid; 
+    border-color: #666666; 
+    border-radius: 1px; 
+    padding: 3px; 
+    width: 100%; 
+} 
+.form, .form h1, .form h2{ 
+    font-family: 'Verdana'; 
+} 
+.form h1{ 
+    font-size: 24px; 
+    color: #FF1D0D; 
+    padding: 0px; 
+    margin: 0px; 
+    margin-bottom: 10px; 
+    border-bottom-style: dotted; 
+    border-bottom-color: #CCCCCC; 
+    border-bottom-width: 2px; 
+    border-radius: 0px; 
+    background-color: #FFFFFF; 
+} 
+.intro{ 
+    margin-bottom: 10px; 
+} 
+.clear{ 
+    clear: both; 
+} 
+.form textarea{ 
+    height: 150px; 
+    width: 100%; 
+} 
+.form input[type=submit]{ 
+    width: 100%; 
+    background-color: #CCCCCC; 
+    color: #222222; 
+} 
+.field{ 
+    margin-bottom: 5px; 
+} 
