--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -5,19 +5,39 @@ div(ng-include='"components/navbar/navbar.html"')
   .row
     .col-lg-12
       h1.page-header Patients:
-      ul.nav.nav-tabs.nav-stacked.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
-        li
-          a(href='#', ng-click='editThing(thing)', tooltip='{{thing.identifier}}')
-            | {{thing.name}}({{thing.identifier}})({{thing.ip}})
-            | {{thing.dob}}
-            | {{thing.datet}}
-            | {{thing.mrp}}
-            | {{thing.nurse}}
+      //-ul.nav.nav-tabs.nav-stacked
+        
+      div.panel.panel-default.col-md-4.col-lg-4.col-sm-6(ng-repeat='thing in awesomeThings')
+          div.panel-heading
+            div.pull-right 
+              h4 {{thing.name}} ({{thing.identifier}})
+              h5 DOB: {{thing.dob | limitTo:10 }} 
+              h5 TOA: {{thing.datet | limitTo:10 }}
+              h5 MRP: {{thing.mrp}}
+              h5 NURSE: {{thing.nurse}}
+            div.panel-body  
+              img.img-circle.pull-left.col-lg-3.img-responsive(src="assets/images/{{thing.avtar}}" alt="Avtar")  
+            div.clearfix
+            hr          
+            b STORY: 
             | {{thing.story}}
+            hr
+            b ASSESSMENT: 
             | {{thing.assessment}}
+            hr
+            b FOLLOW UP: 
             | {{thing.followup}}
+            hr
+            b EVALUATION: 
             | {{thing.evaluation}}
-            button.close(type='button', ng-click='deleteThing(thing)') ×
+            hr
+            a.edit(ng-click='editThing(thing)')
+              span.glyphicon.glyphicon-edit.pull-left
+            a.trash(ng-click='deleteThing(thing)')
+              span.glyphicon.glyphicon-trash.pull-right
+
+
+                      
 <script>
 | $(".hide-form").click(function(){
 |    $("#form").hide();
@@ -27,11 +47,11 @@ div(ng-include='"components/navbar/navbar.html"')
 |    $("#form").show();
 |});
 </script>
+h1 TOA FORM
 a.hide-form [Hide form |
 a.show-form  Show form]
   //- This form needs to be beautified.
 <form id="form" class="form" method="post" enctype="application/x-www-form-urlencoded" accept-charset="UTF-8">
-<h1>TOA</h1>
 <div class="content">
 <div class="intro"><p>Use the form below to add patient details</p></div>
 <div id="section0" >
@@ -40,7 +60,24 @@ a.show-form  Show form]
 <div id="section1" >
 <div class="field"><label for="name">Name</label><input ng-model='newName' type="text" id="name" name="name" size="20" placeholder="Name" required></div>
 <div class="field"><label for="identifier">Identifier</label><input ng-model='newIdentifier' type="text" id="identifier" name="identifier" size="20" placeholder="Identifier" required></div>
-<div class="field"><label for="avtar">Avtar</label><select ng-model='newAvtar' id="avtar" name="avtar"><option value="avtar1">avtar1</option><option value="avtar2">avtar2</option></select></div>
+<div class="field"><label for="avtar">Avtar</label><select ng-model='newAvtar' id="avtar" name="avtar">
+<option value="avatar-01.svg">avatar1</option>
+<option value="avatar-02.svg">avatar2</option>
+<option value="avatar-03.svg">avatar3</option>
+<option value="avatar-04.svg">avatar4</option>
+<option value="avatar-05.svg">avatar5</option>
+<option value="avatar-06.svg">avatar6</option>
+<option value="avatar-07.svg">avatar7</option>
+<option value="avatar-08.svg">avatar8</option>
+<option value="avatar-09.svg">avatar9</option>
+<option value="avatar-10.svg">avatar10</option>
+<option value="avatar-11.svg">avatar11</option>
+<option value="avatar-12.svg">avatar12</option>
+<option value="avatar-13.svg">avatar13</option>
+<option value="avatar-14.svg">avatar14</option>
+<option value="avatar-15.svg">avatar15</option>
+<option value="avatar-16.svg">avatar16</option>
+</select></div>
 <div class="field"><label for="dob">Date of Birth</label><input ng-model='newDob' type="date" id="dob" name="dob" placeholder="yyyy-mm-dd"></div>
 <div class="field"><label for="datet">Date of TOA</label><input ng-model='newDatet' type="date" id="datet" name="datet" value="yyyy-mm-dd" required></div>
 <div class="field"><label for="mrp">MRP</label><input ng-model='newMrp' type="text" id="mrp" name="mrp" size="20" placeholder="MRP" required></div>
@@ -56,23 +93,9 @@ a.show-form  Show form]
 </div>
 </div>
 </form>
-//
-      input.form-control(type='text', placeholder='Name.', ng-model='newName')
-      input.form-control(type='text', placeholder='Identifier.', ng-model='newIdentifier')
-      input.form-control(type='text', placeholder='Avtar.', ng-model='newAvtar')
-      input.form-control(type='text', placeholder='Date of Birth.', ng-model='newDob')
-      input.form-control(type='text', placeholder='Date of TOA.', ng-model='newDatet')
-      input.form-control(type='text', placeholder='MRP.', ng-model='newMrp')
-      input.form-control(type='text', placeholder='Nurse.', ng-model='newNurse')
-      input.form-control(type='text', placeholder='Story.', ng-model='newStory')
-      input.form-control(type='text', placeholder='Assessment.', ng-model='newAssessment')
-      input.form-control(type='text', placeholder='Follow up.', ng-model='newFollowup')
-      input.form-control(type='text', placeholder='Evaluation.', ng-model='newEvaluation')
-      span.input-group-btn
-        button.btn.btn-primary(type='submit', ng-click='addThing()') Add Record
-// 
+
 footer.footer
   .container
     p
-      | NuChange TOA v 1.0.1
+      a.nuchange(href='http://nuchange.ca') NuChange ToA
       
