--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -4,11 +4,11 @@
 
 #banner {
     border-bottom: none;
-    margin-top: -20px;
+    margin-top: -10px;
 }
 
 #banner h1 {
-    font-size: 60px;
+    font-size: 24px;
     line-height: 1;
     letter-spacing: -1px;
 }
@@ -102,3 +102,14 @@
 .field{ 
     margin-bottom: 5px; 
 } 
+td th{
+    font-size: 60%;
+    padding-right: 4px;
+    padding-left: 4px;
+}
+.page-header{
+    font-family: 'Verdana'; 
+    font-size: 24px;
+    line-height: 0.5;
+    letter-spacing: -1px;
+}
