--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -4,8 +4,7 @@ div(ng-include='"components/navbar/navbar.html"')
     .col-sm-12
       h1 Login
       p
-        | Accounts are reset on server restart from
-        code server/config/seed.js
+        | Accounts are reset on server restart.
         | . Default account is
         code test@test.com
         | /
