--- a/client/components/navbar/navbar.jade
+++ b/client/components/navbar/navbar.jade
@@ -18,6 +18,8 @@ div.navbar.navbar-default.navbar-static-top(ng-controller='NavbarCtrl')
         li(ng-show='isAdmin()', ng-class='{active: isActive("/admin")}')
           a(href='/admin') Admin
 
+        li(ng-class='{active: isActive("/help")}')
+          a(href='/help') Help          
       ul.nav.navbar-nav.navbar-right
         li(ng-hide='isLoggedIn()', ng-class='{active: isActive("/signup")}')
           a(href='/signup') Sign up
