--- a/client/app/main/main.jade
+++ b/client/app/main/main.jade
@@ -60,7 +60,7 @@ a.show-form  Show form]
 <div id="section1" >
 <div class="field"><label for="name">Name</label><input ng-model='newName' type="text" id="name" name="name" size="20" placeholder="Name" required></div>
 <div class="field"><label for="identifier">Identifier</label><input ng-model='newIdentifier' type="text" id="identifier" name="identifier" size="20" placeholder="Identifier" required></div>
-<div class="field"><label for="avtar">Avtar</label><select ng-model='newAvtar' id="avtar" name="avtar">
+<div class="field"><label for="avtar">Avatar</label><select ng-model='newAvtar' id="avtar" name="avtar">
 <option value="male-01.png">Male 1</option>
 <option value="female-01.png">Female 1</option>
 <option value="male-02.png">Male 2</option>
