admin removed from login

--- a/client/app/account/login/login.jade
+++ b/client/app/account/login/login.jade
@@ -4,10 +4,10 @@ div(ng-include='"components/navbar/navbar.html"')
     .col-sm-12
       h1 Login
       p
-        | Admin account is
-        code admin@admin.com
+        | Test account is
+        code test@test.com
         | /
-        code admin
+        code test
 
     .col-sm-12
       form.form(name='form', ng-submit='login(form)', novalidate='')
